bin_PROGRAMS = escape_shell_cmd unbounded_copy_by_gets unbounded_copy_by_args off_by_one_array
escape_shell_cmd_SOURCES       = escape_shell_cmd.c
unbounded_copy_by_gets_SOURCES = unbounded_copy_by_gets.c
unbounded_copy_by_args_SOURCES = unbounded_copy_by_args.c
off_by_one_array_SOURCES       = off_by_one_array.c
